--- a/backend/finalapp/requirements.txt
+++ b/backend/finalapp/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-sqlalchemy
-passlib[bcrypt]
-jose
-python-multipart
+fastapi==0.103.0
+uvicorn==0.23.2
+sqlalchemy==2.0.19
+passlib[bcrypt]==1.7.4
+python-jose==3.3.0
+python-multipart==0.0.6
